# data-engineering-bootcamp

00-bootcamp-project/: main-api.py  main-postgres.py  pyproject.toml
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: load.sh
playground/: main.py  pyproject.toml
