[tool.poetry]
name = "00-bootcamp-project"
version = "0.1.0"
description = ""
authors = ["palmparames1996 <80811778+palmparames1996@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "00_bootcamp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
pysftp = "^0.2.9"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
