[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["palmparames1996 <80811778+palmparames1996@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
